# ElephaHealth

./: README.md  db.sqlite3  manage.py  pyproject.toml
ElephaHealth/: Dockerfile  asgi.py  forms.py  run.sh  settings.py  urls.py  views.py  wsgi.py
ElephaHealth/app/: models.py
ElephaHealth/chill_app/: admin.py  app.py  forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
ElephaHealth/chill_app/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_username.py  0003_audio.py  0004_rename_user_myuser.py  0005_rename_myuser_user.py
ElephaHealth/templates/: register.html
