[tool.poetry]
name = "elephahealth"
version = "0.1.0"
description = ""
authors = ["hikmatillo <dolgovdaniil007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
django-phonenumber-field = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
